<resources>
    <string name="app_name">Egorka Delivery</string>
    <string name="name_hint">Представтесь, пожалуйста</string>
    <string name="phone_hint">+7 (979) ___-__-__</string>
    <string name="button_price">Заказать</string>
    <string name="entrance">Подъезд</string>
    <string name="floor">Этаж</string>
    <string name="office">Офис/кв.</string>
    <string name="showDetails">Указать детали</string>
    <string name="newOrder">Оформление заказа</string>
    <string name="cancel">Отмена</string>
    <string name="ContactsSender">Контакты отправителя</string>
    <string name="hintOfName">Имя</string>
    <string name="ContactsSecond">Контакты получателя</string>
    <string name="payString">Оплатить заказ</string>
    <string name="pickupHintText">Откуда забрать?</string>
    <string name="dropHintText">Куда отвезти?</string>
    <string name="addressLabel">Улица, дом</string>
    <string name="splash_transition">Splash</string>
    <string name="number_address_transition">Number Of Address</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_account">Аккаунт</string>
    <string name="menu_about">О приложении</string>
    <string name="close">Закрыть</string>
    <string name="open">Открыть</string>
    <string name="currentOrder">Текущий заказ</string>
    <string name="marketplaces">Маркетплейсы</string>
    <string name="orderPickup">Отправитель</string>
    <string name="orderDrop">Получатель</string>
    <string name="addPickupText">Добавить отправителя</string>
    <string name="addDropText">Добавить получателя</string>
    <string name="payOrder">Оплатить заказ</string>
    <string name="detailsActivity">Указать детали</string>
    <string name="enterAddress">Введите адрес</string>
    <string name="notRequired">Не обязательно к заполнению</string>
    <string name="timeStart">Когда забрать?</string>
    <string name="fastEgorka">Егорка нужен срочно</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="instructionsForEgorka">Поручения для Егорки</string>
    <string name="whatDelivery">Что везём?</string>
    <string name="hintWhatDelivery">Документы / Цветы / Техника / Личная вещь</string>
    <string name="coinDelivery">Ценность вашего груза?</string>
    <string name="hintCoinDelivery">До 100000 ₽</string>
    <string name="update">Обновить</string>
    <string name="deliveryMarketplace">Доставка до маркетплейса</string>
    <string name="howItWork">Как это работает?</string>
    <string name="yourContacts">Ваши контакты</string>
    <string name="countBox">Кол-во коробок?</string>
    <string name="countPallet">Кол-во паллет?</string>
    <string name="sizeOfBox">Укажите размеры и вес коробок</string>
    <string name="dateHint">Оформить доставку до Маркетплейса на завтра можно строго до 15:00.</string>
</resources>